# hopchat

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md  install.sh  killswitch.sh
.github/workflows/: build-ish.yml
hopchat-v1/: Cargo.toml  MILITARY_USE_CASE.md  README.md
hopchat-v1/src/: main.rs
hopchat-v1/src/cli/: commands.rs
hopchat-v1/src/tui/: mod.rs  renderer.rs
hopchat-v1/src/user/: identity.rs
src/: main.rs
src/chat/: messages.rs
src/cli/: commands.rs
src/crypto/: encryption.rs  key_exchange.rs
src/network/: discovery.rs  messaging.rs  mod.rs  peer_registry.rs
src/tui/: input.rs  layout.rs  renderer.rs
src/user/: identity.rs
