[package]
name = "hopchat"
version = "2.1.1"
edition = "2021"
rust-version = "1.70.0"
description = "A terminal-based encrypted peer-to-peer chat system"

[dependencies]
# Terminal UI (pinned for Rust 1.70+ / i686 Alpine compatibility)
ratatui = "0.26.1"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"

# Async runtime (slim: only features we actually use)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption (XChaCha20-Poly1305 via pure-Rust crate, no C deps)
chacha20poly1305 = "0.10"
rand = "0.8"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Local IP detection (cross-platform)
local-ip-address = "0.6"
dns-lookup = "2.0"

# Low-level socket configuration (SO_REUSEADDR)
socket2 = { version = "0.5", features = ["all"] }
hex = "0.4.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
dirs = "6.0.0"

# Lazy static initialization (replaces std::sync::LazyLock for Rust <1.80 compat)
once_cell = "1"
