[package]
name = "hopchat"
version = "1.0.0"
edition = "2021"
description = "A terminal-based encrypted peer-to-peer chat system"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption (XChaCha20-Poly1305 via pure-Rust crate, no C deps)
chacha20poly1305 = "0.10"
rand = "0.8"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Local IP detection (cross-platform)
local-ip-address = "0.6"

# Low-level socket configuration (SO_REUSEADDR)
socket2 = { version = "0.5", features = ["all"] }
hex = "0.4.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
rand_core = "0.10.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
dirs = "6.0.0"
